Prevent content blocks from wrapping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -168,6 +168,7 @@ h2 { font-size: 18px; }
 
 .board-content {
   padding: 0 8px;
+  white-space: nowrap;
 }
 
 .list-view {
